# wrspa

./: .gitignore  AUTHORS  Makefile  README.md  README.nd  game.go  gamestate_string.go  go.mod  go.sum  main.go  timer.go  topbar.go  wiki.go
backend/: Makefile  adapters.go  adapters_test.go  api_handler.go  client.go  client_test.go  daemon.go  daemon_test.go  file_handler.go  file_handler_test.go  get.go  get_test.go  go.mod  go.sum  interfaces.go  marshal_failure.go  marshal_failure_test.go  server.go  server_test.go  static_handler.go  static_handler_test.go
backend-go/: adapters.go  api.go  client.go  go.mod  go.sum  interfaces.go  server_test.go
backend-rust/: Makefile
backend-rust/src/: lib.rs  server.rs
backend/api/: api.go
backend/daemon/: daemon.go  version.go
backend/mocks/: mocks.go
backend/server/: api_handler.go  get.go  (+2 more)
backend_gleam/: GEMINI.md  README.md  gleam.toml  manifest.toml
backend_go/: Makefile  README.md  client.go  client_test.go  daemon.go  daemon_test.go  go.mod  go.sum
backend_rust/: Makefile  README.md
frontend/: Makefile  colors.go  gleam.toml  index.html  manifest.toml
frontend-gleam-m3e/: README.md  gleam.toml  index.html
frontend-gleam-muster/: Makefile  gleam.toml  manifest.toml
frontend-gleam-tailwind/: gleam.toml  index.html  manifest.toml
frontend_m3e/: Makefile  README.md  gleam.toml  manifest.toml
frontend_material_tailwind/: README.md  gleam.toml  manifest.toml
go-app/: .gitignore  LICENSE  go.mod  go.sum
rustyback/: Cargo.toml
rustyback/src/: client.rs  main.rs  server.rs
web/: game.css
(+87 files in other folders)
