[package]
name = "rustyback"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
bytes = "1.6"
url = { version = "2.5", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
mockall = "0.12"
assert_cmd = "2.0"
mockito = "0.31"
tower = { version = "0.4", features = ["full"] }
tempfile = "3.10"
